--- a/css/styles.css
+++ b/css/styles.css
@@ -109,8 +109,17 @@ address ul.address-icons {
 }
 
 .top-block {
-  background-color: #2e2f42;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/effective.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #ffffff;
   padding: 188px 0;
+  text-align: center;
 }
 
 h1.effective {
@@ -173,6 +182,21 @@ section ul.motto-lists {
 
 section li.motto-list-items {
   flex-basis: calc((100% - 72px) / 4);
+}
+
+div.motto-icon-container {
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  height: 112px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.motto-icon-item {
+  width: 64px;
+  height: 64px;
 }
 
 section.mottos h3 {
@@ -238,6 +262,29 @@ section p.tittle {
   text-align: center;
 }
 
+div.member-social-container {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  padding-top: 8px;
+}
+
+a.member-icon-item {
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a.member-icon-item svg {
+  width: 16px;
+  height: 16px;
+}
+
 section.portfolio {
   padding: 120px 0;
 }
@@ -283,6 +330,49 @@ section.portfolio h3 {
 footer.footer {
   background-color: #2e2f42;
   padding: 100px 0;
+}
+
+.footer-container {
+  display: flex;
+}
+
+.footer-site-info {
+}
+
+.footer-site-social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-site-social h3 {
+  color: #fff;
+  font-weight: normal;
+  font-size: 16px;
+}
+
+.footer-site-social-container {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  padding-top: 16px;
+  height: 42px;
+}
+
+a.footer-social-icon-item {
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-icon-item svg {
+  width: 24px;
+  height: 24px;
 }
 
 footer a.logo {
