--- a/css/styles.css
+++ b/css/styles.css
@@ -116,10 +116,11 @@ address ul.address-icons {
     ),
     url(../images/effective.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-position: center;
   color: #ffffff;
   padding: 188px 0;
   text-align: center;
+  max-width: 1440px;
 }
 
 h1.effective {
@@ -194,10 +195,10 @@ div.motto-icon-container {
   justify-content: center;
 }
 
-.motto-icon-item {
+/* .motto-icon-item {
   width: 64px;
   height: 64px;
-}
+} */
 
 section.mottos h3 {
   font-weight: 500;
