--- a/css/styles.css
+++ b/css/styles.css
@@ -79,20 +79,20 @@ nav ul.top-bar-icons {
 }
 
 nav a.nav-icons {
-  color: #2e2f42;
-  padding: 24px 0;
+  position: relative;
+  color: #404bbf;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 24px 0;
 }
 
-nav a.nav-icons::after{
-  position: relative;
-  content: "";
-  width: 100%;
+nav a.nav-icons::after {
   position: absolute;
   left: 0;
   bottom: -1px;
+  content: "";
+  width: 100%;
   height: 4px;
-  color: #404bbf;
+  background-color: #404bbf;
   border-radius: 2px;
 }
 
