--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ div.motto-icon-container {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 8px;
 }
 
 /* .motto-icon-item {
@@ -358,9 +359,11 @@ footer.footer {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-site-info {
+  margin-right: 120px;
 }
 
 .footer-site-social {
@@ -368,21 +371,26 @@ footer.footer {
   flex-direction: column;
 }
 
-.footer-site-social h3 {
-  color: #fff;
-  font-weight: normal;
+.footer-site-social .footer-social-text {
+  color: #FFFFFF;
+  font-weight: 500;
   font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
 
-.footer-site-social-container {
+/* .footer-site-social-container {
   display: flex;
   justify-content: center;
   gap: 16px;
   padding-top: 16px;
   height: 42px;
-}
+} */
 
 a.footer-social-icon-item {
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
   width: 40px;
@@ -394,9 +402,17 @@ a.footer-social-icon-item {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-icon-item svg {
-  width: 24px;
-  height: 24px;
+a.footer-social-icon-item:hover{
+  background-color: #31d0aa;
+}
+
+a.footer-social-icon-item:focus{
+  background-color: #31d0aa;
+}
+
+.footer-social-icon {
+  fill: #f4f4fd;
+  
 }
 
 footer a.logo {
