--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ nav a.nav-icons::after {
   position: absolute;
   left: 0;
   bottom: -1px;
-  content: "";
+  content: '';
   width: 100%;
   height: 4px;
   background-color: #404bbf;
@@ -372,7 +372,7 @@ footer.footer {
 }
 
 .footer-site-social .footer-social-text {
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -388,13 +388,18 @@ footer.footer {
   height: 42px;
 } */
 
+.footer-site-social-order {
+  display: flex;
+  gap: 16px;
+}
+
 a.footer-social-icon-item {
+  width: 40px;
+  height: 40px;
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -402,17 +407,16 @@ a.footer-social-icon-item {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-a.footer-social-icon-item:hover{
+a.footer-social-icon-item:hover {
   background-color: #31d0aa;
 }
 
-a.footer-social-icon-item:focus{
+a.footer-social-icon-item:focus {
   background-color: #31d0aa;
 }
 
 .footer-social-icon {
   fill: #f4f4fd;
-  
 }
 
 footer a.logo {
