--- a/css/styles.css
+++ b/css/styles.css
@@ -393,11 +393,15 @@ footer.footer {
   gap: 16px;
 }
 
+.footer-site-social-list{
+  width: 100%;
+  height: 100%;
+}
+
+
 a.footer-social-icon-item {
   width: 40px;
   height: 40px;
-  width: 100%;
-  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
   display: flex;
